editUser by cong

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,3 +137,10 @@ body{
     background-color: #c0392b;
   }
 }
+
+.checkbox, .radio {
+  margin-top: 10px !important;
+}
+.btn-submit-style{
+  text-align: center;
+}
