--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,5 +145,14 @@ body{
   text-align: center;
 }
 .image{
- width:30%;
+ width:100%;
+ max-height: 100px;
+}
+.fadein .delete{
+  padding-top:10px
+}
+.imageDiv{
+  width: 30%;
+  float: left;
+  padding:10px;
 }
